--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "rxsocket",
   "version": "1.0.0",
-  "description": "",
+  "description": "RxSocket",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:build && npm run test:run",
+    "test:build": "tsc -p tsconfig.spec.json",
+    "test:run": "jasmine"  
   },
   "repository": {
     "type": "git",
