--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,10 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./test/dist",                        /* Redirect output structure to the directory. */
+    "outDir": "./spec/dist",                        /* Redirect output structure to the directory. */
     // "rootDir": "./spec/src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
   },
-  "include": [
-    "./test/**/*.spec.ts"
-  ]
+  // "include": [
+  //   "client",
+  //   "shared",
+  //   "server"
+  // ]
 }
