--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "npm run test:build && npm run test:run",
     "test:build": "tsc -p tsconfig.spec.json",
-    "test:run": "jasmine"  
+    "test:run": "jasmine JASMINE_CONFIG_PATH==./spec/support/jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "ws": "^7.3.0"
   },
   "devDependencies": {
+    "@types/jasmine": "^3.5.10",
     "@types/node": "^14.0.1",
     "@types/ws": "^7.2.4",
     "jasmine": "^3.5.0"
