--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/cedvdb/rxsocket#readme",
   "dependencies": {
+    "chalk": "^4.0.0",
+    "loglevel": "^1.6.8",
+    "loglevel-plugin-prefix": "^0.8.4",
     "rxjs": "^6.5.5",
     "ws": "^7.3.0"
   },
