--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@cedvdb/rxsocket",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "RxSocket",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "directories": {
     "test": "test"
   },
