--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,10 +64,7 @@
 
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
-    "paths": {
-      "~shared/*": ["shared/*"],
-    }
+    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
 
   "exclude": ["spec", "dist"]
